--- a/src/app/product-list/product-list.css
+++ b/src/app/product-list/product-list.css
@@ -27,7 +27,7 @@ h2 {
 
 .product-item p {
   margin: 0.5rem 0;
-  color: #666;
+  
 }
 
 button {
@@ -42,4 +42,14 @@ button {
 
 button:hover {
   background: #1565c0;
+}
+
+.green{
+  color: green;
+}
+.orange{
+  color: orange;
+}
+.red{
+  color: red;
 }
