--- a/src/app/shipping/shipping.html
+++ b/src/app/shipping/shipping.html
@@ -1,8 +1,8 @@
 <h2>Shipping Prices</h2>
 
 <div class="shipping-container">
-  @for (shipping of shippingCosts; track shipping.type) {
-    <div class="shipping-item">
+@for (shipping of shippingCosts(); track shipping.type) {
+      <div class="shipping-item">
       <span class="shipping-type">{{ shipping.type }}</span>
       <span class="shipping-price">${{ shipping.price }}</span>
     </div>
