--- a/src/app/product-details/product-details.css
+++ b/src/app/product-details/product-details.css
@@ -18,12 +18,12 @@ h3 {
 }
 
 p {
-  color: #666;
+  
   line-height: 1.6;
   margin-bottom: 1.5rem;
 }
 
-button {
+.button-true {
   background: #1976d2;
   color: white;
   border: none;
@@ -34,6 +34,16 @@ button {
   font-weight: 600;
 }
 
-button:hover {
+.button-true:hover {
   background: #1565c0;
+}
+
+.green{
+  color: green;
+}
+.orange{
+  color: orange;
+}
+.red{
+  color: red;
 }
