--- a/src/app/provider-list/provider-list.html
+++ b/src/app/provider-list/provider-list.html
@@ -1,8 +1,8 @@
 <h2>Providers</h2>
 
 <div class="providers-container">
-  @for (provider of providers; track provider.id) {
-    <div class="provider-card">
+@for (provider of providers(); track provider.id) {
+      <div class="provider-card">
       <h3>
         <a [routerLink]="['/providers', provider.id]">{{ provider.name }}</a>
       </h3>
